--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0",
     "webpack-shell-plugin": "^0.5.0"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^5.0.36"
   }
 }
