--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
+    "@barba/core": "^2.10.3",
     "@fancyapps/ui": "^5.0.36"
   }
 }
