--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@barba/core": "^2.10.3",
     "@fancyapps/ui": "^5.0.36",
+    "@unseenco/taxi": "^1.8.0",
     "gsap": "^3.12.5"
   }
 }
